fix issue 14 fix issue 15 fix bug in loading global orms